--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
   <string name="paywall_description">This article is available to members only. \nUnlock it to access exclusive member benefits.</string>
   <string name="paywall_cta">Join Cat Articles</string>
   <string name="entitlement_premium">premium</string>
+  <string name="slide_subscribe">Slide to subscribe</string>
 </resources>
